--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<html ng-app="angularFriends" ng-controller="friendsController">
 <head>
 <script src='http://code.jquery.com/jquery-1.10.2.js' type='text/javascript'></script>
 <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
@@ -18,6 +18,7 @@
 
 <body>
 
+
 <h1>The <strong>facebook</strong> Friend Machine</h1>
 
 <div class="friends">
@@ -26,41 +27,50 @@
 <form class="form-inline searchForm" role="form">
   <div class="form-group">
 
-  <input class="form-control" placeholder="Search Anything About Your Friends" >
+  <!-- <input class="form-control" placeholder="Search Anything About Your Friends" ng-model="searchTerm"> -->
   <!-- The stuff below is For step 5....get rid of the one above if you wish-->
 <!--    
     <input class="form-control" placeholder="Search Your Friends' Name" >
     <input class="form-control" placeholder="Search Your Freinds' Location" > 
  -->
-    <select class="input-medium">
-        <option>Name</option>
-        <option># friends</option>
-        <option>City</option>
-        <option>State</option>
-        <option>Country</option>
+  <input class="form-control" placeholder="Search your friends' Name" ng-model="search.name">
+  <input class="form-control" placeholder="Search your friends' Location" ng-model="search.current_location">
+
+<!--   <select class="input-medium" ng-model="stank" ng-options="item.raw as item.pretty for item in items"></select> -->
+
+    <select class="input-medium" ng-model="sortField" ng-options="item.raw as item.pretty for item in items">
+        <option value="name">Name</option>
+        <option value="friend_count"># friends</option>
+        <option value="current_location.city">City</option>
+        <option value="current_location.state">State</option>
+        <option value="current_location.country">Country</option>
     </select>
-    <select class="input-medium">
+    <select class="input-medium" ng-model="ascDes">
         <option value="false">Descending</option>
         <option value="true">Ascending</option>
     </select>
   </div>
 </form>
 
+<div class="friends">
   <ul>
-    <li class='friend'>
-       <img class="profile-pic" src='https://scontent-a.xx.fbcdn.net/hprofile-ash3/833_10200838803828124_1233160321_a.jpg'>
-      <h3>Cali Fornia</h3>
+    <li ng-repeat="friend in friends | filter:search | orderBy: sortField:ascDes"> 
+      <img class="profile-pic" ng-src='{{friend.pic_square}}'>
+      <h3>{{friend.name}}</h3>
       <div class="location">
-        Location: New Port Beach, California, United States
+        Location: {{friend.current_location.city}}, {{friend.current_location.state}}, {{friend.current_location.country}}
       </div>      
       <div class="status">
-        Status: I hate the snow. I wish I was on the beach right now!!! <span class="hashtag">#ihateprovo</span>
+        <br/>
+        {{friend.status.message}}
       </div>      
       <div class="num-friends">
-        Friends: 1,367
+        {{friend.friend_count}}
       </div>
     </li>
-  </ul>
+   </ul>
+</div>
+
 </div>
 
 
